compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__numbers__numbers_with_underscores1.snap
---
source: compiler-core/src/erlang/tests/numbers.rs
expression: "\nconst i = 100_000\nconst f = 100_000.00101\npub fn main() {\n  i\n  f\n}\n"
---
----- SOURCE CODE

const i = 100_000
const f = 100_000.00101
pub fn main() {
  i
  f
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> float().
main() ->
    100000,
    100000.00101.
