compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__numbers__numbers_with_underscores2.snap
---
source: compiler-core/src/erlang/tests/numbers.rs
expression: "\npub fn main() {\n  let assert 100_000 = 1\n  let assert 100_000.00101 = 1.\n  1\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let assert 100_000 = 1
  let assert 100_000.00101 = 1.
  1
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
main() ->
    case 1 of
        100000 ->
            case 1.0 of
                100000.00101 ->
                    1;

                _value ->
                    erlang:error(#{
                        gleam_error => let_assert,
                        message => ~"Pattern match failed, no pattern matched the value.",
                        file => ~"project/test/my/mod.gleam",
                        module => ~"my/mod",
                        function => ~"main",
                        line => 4,
                        value => _value,
                        start => 44,
                        'end' => 73,
                        pattern_start => 55,
                        pattern_end => 68
                    })
            end;

        _value@1 ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 3,
                value => _value@1,
                start => 19,
                'end' => 41,
                pattern_start => 30,
                pattern_end => 37
            })
    end.
